# cumt_ppt

./: .gitignore  CHANGELOG.md  README.md  SKILL.md
cumt_ppt_mcp/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
cumt_ppt_mcp/docs/: pdf_image_black_background_investigation.md
cumt_ppt_mcp/examples/: codex_config_example.toml  sample_workflow.md
cumt_ppt_mcp/src/cumt_ppt_mcp/: __init__.py  ppt_utils.py  server.py
cumt_ppt_mcp/tests/: run_real_ppt_regression.py  test_basic.py  test_v03.py
cumt_ppt_mcp/tests/fixtures/: sample_cumt_test.pptx
examples/: example_input_contract.md
prompts/: final_cleanup.md  generate_from_journal.md  generate_from_pdf.md  polish_existing_ppt.md  visual_check.md
references/: font_rules.md  slide_structure.md  style_rules.md
scripts/: check_ppt_fonts.py  export_preview.py  generate_diagram.py  make_three_line_table.py  normalize_cumt_logo.py  render_formulas.py
