[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cumt-ppt-mcp"
version = "0.1.0"
description = "MCP server for CUMT undergraduate thesis defense PPTX automation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27.0",
  "python-pptx>=1.0.2",
  "Pillow>=10.0.0",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
cumt-ppt-mcp = "cumt_ppt_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
